# gen/proto/api.swagger.json
@@ -15,61 +15,16 @@
   "produces": [
     "application/json"
   ],
-  "paths": {
-    "/api/v1/sqlbuilder": {
-      "post": {
-        "operationId": "SqlBuilderApi_Generate",
-        "responses": {
-          "default": {
-            "description": "An unexpected error response.",
-            "schema": {
-              "$ref": "#/definitions/rpcStatus"
-            }
-          }
-        },
-        "parameters": [
-          {
-            "name": "body",
-            "in": "body",
-            "required": true,
-            "schema": {
-              "$ref": "#/definitions/protoBuilderRequest"
-            }
-          }
-        ],
-        "tags": [
-          "SqlBuilderApi"
-        ]
-      }
-    }
-  },
+  "paths": {},
   "definitions": {
-    "protoBuilderRequest": {
-      "type": "object",
-      "properties": {
-        "builders": {
-          "type": "array",
-          "items": {
-            "type": "object",
-            "$ref": "#/definitions/protoDeepWrapper"
-          }
-        },
-        "driver": {
-          "$ref": "#/definitions/protoDriver"
-        },
-        "strategy": {
-          "$ref": "#/definitions/protoBuilderStrategy"
-        }
-      }
-    },
     "protoBuilderStrategy": {
       "type": "string",
       "enum": [
-        "STRATEGY_UNSPECIFIED",
-        "STRATEGY_MODEL",
-        "STRATEGY_TEMPLATE"
+        "BUILDER_STRATEGY_UNSPECIFIED",
+        "BUILDER_STRATEGY_MODEL",
+        "BUILDER_STRATEGY_TEMPLATE"
       ],
-      "default": "STRATEGY_UNSPECIFIED"
+      "default": "BUILDER_STRATEGY_UNSPECIFIED"
     },
     "protoCallType": {
       "type": "string",
@@ -96,11 +51,29 @@
         "alias": {
           "type": "string"
         },
-        "aggAble": {
+        "agg_able": {
           "type": "boolean"
         },
-        "useAs": {
+        "use_as": {
           "type": "boolean"
+        }
+      }
+    },
+    "protoCommonResponse": {
+      "type": "object",
+      "properties": {
+        "code": {
+          "type": "integer",
+          "format": "int32"
+        },
+        "msg": {
+          "type": "string"
+        },
+        "data": {
+          "type": "object",
+          "additionalProperties": {
+            "type": "string"
+          }
         }
       }
     },
@@ -132,7 +105,7 @@
         "call": {
           "type": "string"
         },
-        "callType": {
+        "call_type": {
           "$ref": "#/definitions/protoCallType"
         },
         "vars": {
@@ -142,10 +115,10 @@
             "$ref": "#/definitions/protoMixVars"
           }
         },
-        "callAs": {
+        "call_as": {
           "type": "string"
         },
-        "useAs": {
+        "use_as": {
           "type": "boolean"
         }
       }
@@ -173,7 +146,7 @@
     "protoLimit": {
       "type": "object",
       "properties": {
-        "limitN": {
+        "limit_n": {
           "type": "integer",
           "format": "int32"
         },
@@ -198,10 +171,10 @@
       "type": "object",
       "properties": {
         "model": {
-          "$ref": "#/definitions/protoSQLReference"
+          "$ref": "#/definitions/protoSqlReference"
         },
         "template": {
-          "$ref": "#/definitions/protoSQLText"
+          "$ref": "#/definitions/protoSqlText"
         }
       }
     },
@@ -227,32 +200,14 @@
       "type": "object",
       "properties": {
         "dependent": {
-          "type": "string"
+          "$ref": "#/definitions/protoMixField"
         },
         "order": {
           "type": "string"
         }
       }
     },
-    "protoResponse": {
-      "type": "object",
-      "properties": {
-        "Code": {
-          "type": "integer",
-          "format": "int32"
-        },
-        "Msg": {
-          "type": "string"
-        },
-        "Data": {
-          "type": "object",
-          "additionalProperties": {
-            "type": "string"
-          }
-        }
-      }
-    },
-    "protoSQLReference": {
+    "protoSqlReference": {
       "type": "object",
       "properties": {
         "from": {
@@ -272,7 +227,7 @@
             "$ref": "#/definitions/protoExpression"
           }
         },
-        "groupBy": {
+        "group_by": {
           "type": "array",
           "items": {
             "type": "object",
@@ -295,7 +250,7 @@
           },
           "title": "Select 可以是 Column 或 Expression"
         },
-        "orderBy": {
+        "order_by": {
           "type": "array",
           "items": {
             "type": "object",
@@ -307,7 +262,7 @@
         }
       }
     },
-    "protoSQLText": {
+    "protoSqlText": {
       "type": "object",
       "properties": {
         "text": {
@@ -318,13 +273,13 @@
     "protoTable": {
       "type": "object",
       "properties": {
-        "tableName": {
+        "table_name": {
           "type": "string"
         },
-        "tableSchema": {
+        "table_schema": {
           "type": "string"
         },
-        "tableAlias": {
+        "table_alias": {
           "type": "string"
         }
       }
